--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.3",
     "@types/pg": "^8.15.4",
     "drizzle-kit": "^0.31.1",
