--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Check for Vulnerabilities
         run: npm audit --audit-level=high
 # Backend needs adjustment for build step
-#      - name: Build Backend
-#       run: npm run build
+      - name: Build Backend
+        run: npm run build
