Added paths backend to backend-ci.yml

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -5,10 +5,14 @@ on:
     branches:
       - main
       - feature/**
+    paths:
+      - 'backend/**'
   pull_request:
     branches:
       - main
       - feature/**
+    paths:
+      - 'backend/**'
 
 jobs:
   build:
