Dockerized backend with auto DB migrations

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,21 @@
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/loop_it
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 
-# Server
+# Database Connection Details (für entrypoint.sh)
+DB_HOST=localhost
+DB_PORT=5432
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
+POSTGRES_DB=database_name
+
+# Server Configuration
 PORT=3000
 NODE_ENV=development
 
-# JWT (falls später benötigt)
-JWT_SECRET=your-secret-key
+# Security
+JWT_SECRET=your-secret-key-here
+
+# Optional: Weitere Konfigurationen
+# CORS_ORIGIN=http://localhost:3000
+# LOG_LEVEL=info
+# SESSION_SECRET=your-session-secret
