Added current development of Frontend Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,5 +38,24 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  frontend:
+    build:
+      context: ./frontend
+    environment:
+      # Für Build-Zeit Konfiguration
+      VITE_API_URL: http://localhost:3000
+      VITE_APP_NAME: Loop-It
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
 volumes:
   postgres_data:
