Completed Docker setup for full stack deployment and new diary entry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       timeout: 3s
       retries: 10
       start_period: 10s
+    networks:
+      - loop-it-network
 
   backend:
     build:
@@ -25,37 +27,45 @@ services:
       PORT: 3000
       NODE_ENV: production
       JWT_SECRET: supersecret
-      # Neue Variablen für das entrypoint.sh:
+      # Database connection variables
       DB_HOST: postgres
       DB_PORT: 5432
       POSTGRES_USER: loop_user
       POSTGRES_PASSWORD: loop_password
       POSTGRES_DB: loop-it
     ports:
-      - "3000:3000"
+      - "3000:3000"  # Für direkten Backend-Zugriff
     depends_on:
       postgres:
         condition: service_healthy
     restart: unless-stopped
+    networks:
+      - loop-it-network
 
   frontend:
     build:
       context: ./frontend
-    environment:
-      # Für Build-Zeit Konfiguration
-      VITE_API_URL: http://localhost:3000
-      VITE_APP_NAME: Loop-It
+      args:
+        # API läuft jetzt über Reverse Proxy
+        VITE_API_URL: http://localhost
+        VITE_APP_NAME: Loop-It
     ports:
       - "80:80"
     depends_on:
       - backend
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - loop-it-network
 
 volumes:
   postgres_data:
+
+networks:
+  loop-it-network:
+    driver: bridge
