--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,6 +24,9 @@ RUN if [ -f "vite.config.docker.js" ]; then \
 # --- Production Stage ---
 FROM nginx:alpine
 
+# Copy custom nginx configuration FIRST!
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Copy built application from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
