--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,20 +1,25 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # Debug-Log für API-Calls
-    error_log /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log;
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
 
     # Frontend
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # API Reverse Proxy (mit mehr Debug)
+    # API Reverse Proxy
     location /api/ {
+        # Backend erwartet /api/auth/login, also behalte /api im Pfad!
         proxy_pass http://backend:3000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -22,6 +27,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # Debug Headers
-        add_header X-Proxy-Pass "backend:3000" always;
+        add_header X-Proxy-Pass "backend:3000/api" always;
     }
 }
