Fixes to nginx.conf

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,14 +19,15 @@ server {
 
     # API Reverse Proxy
     location /api/ {
-        # Backend erwartet /api/auth/login, also behalte /api im Pfad!
-        proxy_pass http://backend:3000/api/;
+        # Entferne /api/ und leite an Backend weiter
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # Debug Headers
-        add_header X-Proxy-Pass "backend:3000/api" always;
+        add_header X-Proxy-Pass "backend:3000" always;
     }
 }
