Added Settings Page, Added Dark and Light Mode, corrected filter function, added userController in Backend, corrected Backend bugs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,14 @@
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-that-is-at-least-32-characters-long-for-security
+JWT_EXPIRES_IN=900
+# 900 = 15 Minuten in Sekunden
+# 3600 = 1 Stunde
+# 86400 = 24 Stunden
+REFRESH_TOKEN_EXPIRES_IN=7d
+
 # Database
-DATABASE_URL=postgresql://username:password@localhost:5432/loop_it
+DATABASE_URL=postgresql://loop_user:loop_password@localhost:5432/loop-it
 
 # Server
 PORT=3000
-NODE_ENV=development
-
-# JWT (falls später benötigt)
-JWT_SECRET=your-secret-key
+FRONTEND_URL=http://localhost:5173
