--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,14 +19,29 @@ server {
 
     # API Reverse Proxy
     location /api/ {
-        
-        proxy_pass http://backend:3000;
+        # WICHTIG: /api/ am Ende hinzufügen!
+        proxy_pass http://backend:3000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # CORS Headers hinzufügen
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
+        
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin * always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
+        
         # Debug Headers
-        add_header X-Proxy-Pass "backend:3000" always;
+        add_header X-Proxy-Pass "backend:3000/api/" always;
     }
 }
