--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: loopit-dev
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,6 +18,7 @@ spec:
         image: postgres:17
         ports:
         - containerPort: 5432
+          name: postgres
         env:
         - name: POSTGRES_DB
           value: "loop-it"
@@ -33,13 +29,52 @@ spec:
             secretKeyRef:
               name: loopit-secrets
               key: postgres-password
+        
+        # HEALTH CHECKS für PostgreSQL
+        livenessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - loop_user
+            - -d
+            - loop-it
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+          successThreshold: 1
+        
+        readinessProbe:
+          exec:
+            command:
+            - pg_isready
+            - -U
+            - loop_user
+            - -d
+            - loop-it
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
+          successThreshold: 1
+        
+        # Resource Management
         resources:
           requests:
-            memory: "256Mi"
+            memory: "512Mi"
             cpu: "250m"
           limits:
-            memory: "512Mi"
-            cpu: "500m"
+            memory: "1024Mi"
+            cpu: "1000m"
+        
+        # Persistent Storage
+        volumeMounts:
+        - name: postgres-storage
+          mountPath: /var/lib/postgresql/data
+      volumes:
+      - name: postgres-storage
+        emptyDir: {}  # Für lokale Entwicklung, später PVC
 ---
 apiVersion: v1
 kind: Service
@@ -52,3 +87,4 @@ spec:
   ports:
   - port: 5432
     targetPort: 5432
+    name: postgres
