--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
+    "prom-client": "^15.1.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
