--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,15 +14,26 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
+.env.monitoring
+*.env
+
+# Security & secrets
+*.key
+*.pem
+*.crt
+secrets/
+*secrets-generated.yaml
+*secrets
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
@@ -23,11 +41,5 @@ dist-ssr
 *.sln
 *.sw?
 
-
-# Environment files
-.env
-.env.local
-*.env
-
-*secrets-generated.yaml
-*secrets
+# Runtime files
+*.local
