--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,11 +3,14 @@ kind: Ingress
 metadata:
   name: loopit-ingress
   namespace: loopit-dev
+  labels:
+    app: loop-it
+    component: ingress
   annotations:
     # NGINX Ingress Controller
     kubernetes.io/ingress.class: nginx
     
-    # CORS Headers für API Requests
+    # CORS Headers
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
@@ -21,16 +24,48 @@ metadata:
     
     # SSL Redirect deaktivieren für lokale Entwicklung
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    
-    # Rewrite für bessere API Pfade (optional)
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - host: localhost
     http:
       paths:
-      # API Routes - Backend (höhere Priorität durch längeren Pfad)
+      # ==============================
+      # MONITORING ROUTES (höchste Priorität durch längere Pfade)
+      # ==============================
+      
+      # Grafana auf /monitoring/ (ExternalName Service)
+      - path: /monitoring
+        pathType: Prefix
+        backend:
+          service:
+            name: grafana-external
+            port:
+              number: 3000
+      
+      # Prometheus auf /prometheus/ (ExternalName Service)
+      - path: /prometheus
+        pathType: Prefix
+        backend:
+          service:
+            name: prometheus-external
+            port:
+              number: 9090
+      
+      # Loki auf /loki/ (ExternalName Service)
+      - path: /loki
+        pathType: Prefix
+        backend:
+          service:
+            name: loki-external
+            port:
+              number: 3100
+      
+      # ==============================
+      # LOOP-IT ROUTES
+      # ==============================
+      
+      # Backend API (höhere Priorität vor Frontend)
       - path: /api
         pathType: Prefix
         backend:
@@ -39,7 +74,7 @@ spec:
             port:
               number: 3000
       
-      # Health Check für Backend
+      # Backend Health Check
       - path: /health
         pathType: Prefix
         backend:
@@ -48,7 +83,16 @@ spec:
             port:
               number: 3000
       
-      # Frontend - Alle anderen Routen (niedrigere Priorität)
+      # Backend Metrics (für direkten Zugriff)
+      - path: /metrics
+        pathType: Prefix
+        backend:
+          service:
+            name: backend
+            port:
+              number: 3000
+      
+      # Frontend - Alle anderen Routen (niedrigste Priorität)
       - path: /
         pathType: Prefix
         backend:
@@ -56,46 +100,52 @@ spec:
             name: frontend
             port:
               number: 80
-  
-  # Optional: Weitere Hosts für verschiedene Environments
-  # - host: loopit.local
-  #   http:
-  #     paths:
-  #     - path: /api
-  #       pathType: Prefix
-  #       backend:
-  #         service:
-  #           name: backend
-  #           port:
-  #             number: 3000
-  #     - path: /
-  #       pathType: Prefix
-  #       backend:
-  #         service:
-  #           name: frontend
-  #           port:
-  #             number: 80
 
 ---
-# Optional: Service für NGINX Ingress Controller LoadBalancer
-# (Für Docker Desktop normalerweise nicht nötig)
+# ExternalName Services für Cross-Namespace-Zugriff
 apiVersion: v1
 kind: Service
 metadata:
-  name: ingress-nginx-controller-loadbalancer
-  namespace: ingress-nginx
+  name: grafana-external
+  namespace: loopit-dev
+  labels:
+    app: monitoring
+    component: proxy
 spec:
-  type: LoadBalancer
+  type: ExternalName
+  externalName: grafana.monitoring.svc.cluster.local
   ports:
-  - port: 80
-    targetPort: 80
-    protocol: TCP
-    name: http
-  - port: 443
-    targetPort: 443
-    protocol: TCP
-    name: https
-  selector:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
+  - port: 3000
+    targetPort: 3000
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus-external
+  namespace: loopit-dev
+  labels:
+    app: monitoring
+    component: proxy
+spec:
+  type: ExternalName
+  externalName: prometheus.monitoring.svc.cluster.local
+  ports:
+  - port: 9090
+    targetPort: 9090
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: loki-external
+  namespace: loopit-dev
+  labels:
+    app: monitoring
+    component: proxy
+spec:
+  type: ExternalName
+  externalName: loki.monitoring.svc.cluster.local
+  ports:
+  - port: 3100
+    targetPort: 3100
