--- a/k8s-aws/backend.yaml
+++ b/k8s-aws/backend.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: loopit-dev
+  namespace: loop-it
   labels:
     app: backend
     version: v1
@@ -151,7 +151,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: loopit-dev
+  namespace: loop-it
   labels:
     app: backend
   annotations:
@@ -175,7 +175,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: backend-hpa
-  namespace: loopit-dev
+  namespace: loop-it
   labels:
     app: backend
 spec:
@@ -231,7 +231,7 @@ apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: backend-pdb
-  namespace: loopit-dev
+  namespace: loop-it
   labels:
     app: backend
 spec:
