--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,15 @@
 FROM node:lts-alpine AS builder
 WORKDIR /app
 
+# Copy package files
+COPY package*.json ./
+
+# Install dependencies
+RUN npm ci --only=production --silent
+
+# Copy source code
+COPY . .
+
 # Build arguments
 ARG VITE_API_URL=http://localhost:3000
 ARG VITE_APP_NAME=Loop-It
@@ -43,8 +52,9 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Add healthcheck
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/ || exit 1
 
+# Expose port 8080 instead of 80
 EXPOSE 8080
 
 CMD ["nginx", "-g", "daemon off;"]
