A lot of Bug Fixes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,10 @@ COPY package*.json ./
 # Install all dependencies first (for building)
 RUN npm ci && npm cache clean --force
 
+RUN mkdir uploads
+RUN cd uploads && mkdir posts && mkdir profiles && mkdir temp
+RUN cd ..
+
 # Copy source code and build
 COPY . .
 RUN npm run build
