--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ JWT_EXPIRES_IN=7d
 
 # Application Configuration
 NODE_ENV=development
-FRONTEND_URL=http://localhost
+FRONTEND_URL=http://localhost:8080
 VITE_API_URL=http://localhost:3000
 VITE_APP_NAME=Loop-It
 
